# mypipeline

./: .gitignore  README.md  README.txt  index.html  main.js  package.json  preload.js  pyproject.toml  renderer.js  styles.css
.github/workflows/: pipeline-ci.yml
docs/: windows_ui_pipeline.md
docs/flow/: Ageless-Pipeline.txt
pipeline/: batch_queue.py  config.yaml  postprocess.py  run.py  watcher.py
pipeline/config/: model.json
pipeline/models/: __init__.py  provider_gpt5_vision.py
pipeline/prompts/: dynamic.txt  rules_minimal.txt
pipeline/prompts/exemplars/: general.json
pipeline/schemas/: card.json  card_record.py
pipeline/utils/: fs.py  hints.py  log.py  naming.py
scripts/windows/: 1_pair.bat  2_queue.bat  3_postprocess.bat  dev-cleanup.bat  dev-reset.ps1
src/mypipeline/: __init__.py  card_pipeline.py  classifier.py  clients.py  config.py  main.py  models.py
tests/: test_card_record.py  test_env_writer.py  test_postprocess_integration.py
